tests/baselines/reference/unusedMultipleParameter1InFunctionExpression.errors.txt
tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.ts(1,21): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.ts(2,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.ts (2 errors) ====
    var func = function(person: string, person2: string) {
                        ~~~~~~
!!! error TS6133: 'person' is declared but never used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
        person2 = "Dummy value";
    }